# kraken-decontaminated-database

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  build.sh  decontam_conterminator.cpp  decontam_kmer.cpp
